[package]
name = "quikdecision_cli"
version = "0.7.0"
authors = ["G. Wade Johnson <gwadej@anomaly.org>"]
description = "Make random decisions using one of a few different methods."
readme = "README.md"
keywords = ["decisions", "random", "coin flip", "dice roll"]
categories = ["command-line-utilities", "games"]
license = "MIT"
edition = "2018"

[dependencies]

rand = "0.6.1"
regex = "1"
quikdecision = { git = "https://github.com/gwadej/quikdecision_rust" }

[lib]

name = "cli"
